--- a/notes.html
+++ b/notes.html
@@ -405,7 +405,7 @@ Hence, the difference between the actual number of edges between node <span clas
     </mrow>
     <annotation encoding="application/x-tex">{\displaystyle w}</annotation>
   </semantics>
-</math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/88b1e0c8e1be5ebe69d18a8010676fa42d7961e6" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -0.338ex; width:1.664ex; height:1.676ex;" alt="w"></span> and the expected number of edges between them is
+</math></span><img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/88b1e0c8e1be5ebe69d18a8010676fa42d7961e6" class="mwe-math-fallback-image-inline mw-invert" aria-hidden="true" style="vertical-align: -0.338ex; width:1.664ex; height:1.676ex;" alt="w"></span> and the expected number of edges between them is:
 </p>
 	
 <div class="infoblock">
