--- a/notes.html
+++ b/notes.html
@@ -1659,6 +1659,12 @@ Hence, the difference between the actual number of edges between node <span clas
 </li>	
 <li><p><a href="https://snap.stanford.edu/class/cs224w-2015/">CS224W: Social and Information Network Analysis </a></p>
 </li>
+<li><p><a href="https://www.cs.cmu.edu/~ckingsf/bioinfo-lectures/">Bioinformatics Lecture Notes</a></p>
+</li>
+<li><p><a href="https://www.cs.tau.ac.il/~rshamir/algmb/algmb-archive.htm/">Algorithms in Molecular Biology</a></p>
+</li>
+<li><p><a href="https://www.cs.tau.ac.il/~roded/courses/bnet06.html">Analysis of Biological Networks</a></p>
+</li>	
 </ol>
 	
 <!-- Calendar -->
