--- a/notes.html
+++ b/notes.html
@@ -1661,7 +1661,7 @@ Hence, the difference between the actual number of edges between node <span clas
 </li>
 <li><p><a href="https://www.cs.cmu.edu/~ckingsf/bioinfo-lectures/">Bioinformatics Lecture Notes</a></p>
 </li>
-<li><p><a href="https://www.cs.tau.ac.il/~rshamir/algmb/algmb-archive.htm/">Algorithms in Molecular Biology</a></p>
+<li><p><a href="https://www.cs.tau.ac.il/~rshamir/algmb/algmb-archive.htm">Algorithms in Molecular Biology</a></p>
 </li>
 <li><p><a href="https://www.cs.tau.ac.il/~roded/courses/bnet06.html">Analysis of Biological Networks</a></p>
 </li>	
