--- a/index.html
+++ b/index.html
@@ -39,8 +39,13 @@ MathJax.Hub.Config({
 
 <table class="imgtable">
 <tr>
+<td align=center>
+<img src="sc.jpg" alt="Suprateek Chatterjee" width="350px" >
+<td width=100% align=center>	
+<!--	
 <td> <img src="sc.jpg" alt="Suprateek Chatterjee"  width="300px" height="400px" /> </td>
 <td align="left">
+-->
 <p>Department of Applied Sciences<br />
 <a href="https://www.iiita.ac.in/" >Indian Institute of Information Technology, Allahabad</a><br />
 Allahabad, India<br /></p>
