--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ MathJax.Hub.Config({
 <td> <img src="sc.jpg" alt="Suprateek Chatterjee"  width="300px" height="400px" /> </td>
 <td align="left">
 <p>Department of Applied Sciences<br />
-<a href="https://www.iiita.ac.in/" >Indian Institute of </p> Information Technology, Allahabad</a><br />
+<a href="https://www.iiita.ac.in/" >Indian Institute of <br /> Information Technology, Allahabad</a><br />
 Allahabad, India<br /></p>
 </td>
 </tr>
