--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ Allahabad, India<br /></p>
 
 <div class="infoblock">
 <div class="blockcontent">
-<p><pre></tt>&ldquo;Sometimes the questions are complicated and the answers are simple.&rdquo;</p>
-&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&dash;Dr. Seuss</pre></p>
+<p><pre></tt>&ldquo;Amazingly simple and far-reaching natural laws govern the structure and evolution of all the complex networks that surround us.&rdquo;</p>
+&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&dash;A.-L. B.</pre></p>
 </div>
 </div>
 
