--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Allahabad, India<br /></p>
 <div class="infoblock">
 <div class="blockcontent">
 <p><pre></tt>&ldquo;Amazingly simple and far-reaching natural laws govern the structure and evolution of all the complex networks that surround us.&rdquo;</p>
-&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&dash;A.-L. B.</pre></p>
+&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&dash;&#x09;A.-L. B.</pre></p>
 </div>
 </div>
 
