--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ MathJax.Hub.Config({
 
 <table class="imgtable">
 <tr>
-<td> <img src="s.jpg" alt="Suprateek Chatterjee"  width="300px" height="400px" /> </td>
+<td> <img src="sc.jpg" alt="Suprateek Chatterjee"  width="300px" height="400px" /> </td>
 <td align="left">
 <p>Department of Applied Sciences<br />
 <a href="https://www.iiita.ac.in/" >Indian Institute of <br /> Information Technology, Allahabad</a><br />
