--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ MathJax.Hub.Config({
 <tr>
 <td> <img src="sc.jpg" alt="Suprateek Chatterjee"  width="300px" height="400px" /> </td>
 <td align="left">
-<p>Department of Applied Sciences<br />
-<a href="https://www.iiita.ac.in/" >Indian Institute of <br /> Information Technology, Allahabad</a><br />
+<p>Assistant Professor<br />Department of Medical Devices<br />
+<a href="https://www.iiita.ac.in/" >National Institute of Pharmaceutical<br /> Education and Research, Raebareli</a><br />
 Allahabad, India<br /></p>
 </td>
 </tr>
