--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="shortcut icon" type="image/png" href="favicon_SC.png" />
-<title>Suprateek Chatterjee</title>
+<title>Suprateek Chatterjee, Ph.D.</title>
 </head>
 	
 <!-- MathJax -->
@@ -42,8 +42,8 @@ MathJax.Hub.Config({
 <td> <img src="sc.jpg" alt="Suprateek Chatterjee"  width="300px" height="400px" /> </td>
 <td align="left">
 <p>Assistant Professor<br />Department of Medical Devices<br />
-<a href="https://www.iiita.ac.in/" >National Institute of Pharmaceutical<br /> Education and Research, Raebareli</a><br />
-Allahabad, India<br /></p>
+<a href="https://niperraebareli.edu.in/" >National Institute of Pharmaceutical<br /> Education and Research, Raebareli</a><br />
+India<br /></p>
 </td>
 </tr>
 </table>
