--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="shortcut icon" type="image/png" href="favicon_SC.png" />
-<title>Suprateek Chatterjee, Ph.D.</title>
+<title>Suprateek Chatterjee</title>
 </head>
 	
 <!-- MathJax -->
@@ -34,7 +34,7 @@ MathJax.Hub.Config({
 
 <td id="layout-content">
 <div id="toptitle">
-<h1>Suprateek Chatterjee</h1>
+<h1>Suprateek Chatterjee, Ph.D.</h1>
 </div>
 
 <table class="imgtable">
