--- a/publications.html
+++ b/publications.html
@@ -133,7 +133,7 @@ arXiv: 1907.03512 <br />
 </div>
 S. Chatterjee <br />
 Ph.D. Thesis, IIIT-Allahabad <br />	
-[<a href="docs/" >pdf-slides</a>]</a> <br />
+[<a href="docs/PhD_Defense.pdf" >pdf-slides</a>]</a> <br />
 </li>
 	
 <li>
