--- a/contact.html
+++ b/contact.html
@@ -44,14 +44,14 @@ MathJax.Hub.Config({
 	}
 </style>
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1801.6256002985695!2d81.7699488!3d25.429864!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1562299306037!5m2!1sen!2sin" width="500" height="400" frameborder="0" style="border:0" allowfullscreen>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12038.095504518626!2d81.2614056682034!3d26.23090489254594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399bfbb8385c3c19%3A0x8d6a3c3dcb9eb81b!2sNIPER+Raebareli!5e0!3m2!1sen!2sin!4v1500275656001" width="500" height="400" frameborder="0" style="border:0" allowfullscreen>
 </iframe>
 
 <dl>
-HPC Laboratory<br />
-4315, Computer Center-2<br />
-IIIT-Allahabad<br />
-211012, India<br />
+National Institute of Pharmaceutical Education and Research<br />
+Bijnor-Sisendi Road, Sarojini Nagar<br />
+Near CRPF Base Camp, Lucknow (UP)<br />
+226002, India<br />
 </dl>
 
 <div id="footer">
