--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@ MathJax.Hub.Config({
 	}
 </style>
 
-<iframe src="https://www.google.com/maps/@26.724204,80.904161,15z?hl=en-US&entry=ttu&g_ep=EgoyMDI1MDkyNC4wIKXMDSoASAFQAw%3D%3D" width="500" height="400" frameborder="0" style="border:0" allowfullscreen>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12038.095504518626!2d81.2614056682034!3d26.23090489254594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!" width="500" height="400" frameborder="0" style="border:0" allowfullscreen>
 </iframe>
 
 <dl>
