--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,7 @@ MathJax.Hub.Config({
 </iframe>
 
 <dl>
+Email: cf.schatterjee[AT]niperrbl.ac.in <br />	
 National Institute of Pharmaceutical Education and Research<br />
 Bijnor-Sisendi Road, Sarojini Nagar<br />
 Near CRPF Base Camp, Lucknow (UP)<br />
