--- a/publications.html
+++ b/publications.html
@@ -79,6 +79,26 @@ MathJax.Hub.Config({
 <ul>
 
 <li>
+<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> Deep Learning Methods for Splicing Variant Pathogenicity (MMSplice) </b></a><br />
+<div class="abs">
+<b>Abstract:</b>
+</div>
+S. Chatterjee, A. Dey, <br />
+arXiv: <br />
+[<a href="" >doi</a>] | [<a href= "http://arxiv.org/abs/" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/" >poster</a>] | [<a href="" >BibTeX</a>] </a> <br />
+</li>
+
+<li>
+<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> High-Content Imaging and AI-Driven Phenotyping of Splicing Defects. </b></a><br />
+<div class="abs">
+<b>Abstract:</b>
+</div>
+S. Chatterjee, A. Dey, <br />
+arXiv: <br />
+[<a href="" >doi</a>] | [<a href= "http://arxiv.org/abs/" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/" >poster</a>] | [<a href="" >BibTeX</a>] </a> <br />
+</li>
+	
+<li>
 <a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> Over-representation analysis of angiogenic factors in immunosuppressive mechanisms in neoplasms and neurological conditions during COVID-19 </b></a><br />
 <div class="abs">
 <b>Abstract:</b> Recent studies emphasized the necessity to identify key (human) biological processes and pathways targeted by the Coronaviridae family of viruses, especially SARS-CoV-2. COVID-19 caused up to 33-55% death rates in COVID-19 patients with malignant neoplasms and Alzheimer's disease. Given this scenario, we identified biological processes and pathways which are most likely affected by COVID-19. The associations between various diseases and human genes known to interact with viruses from Coronaviridae family were obtained from the IntAct COVID-19 data set annotated with DisGeNET data. We constructed the disease-gene network to identify genes that are involved in various comorbid diseased states. Communities from the disease-gene network through Louvain method were identified and functional enrichment through over-representation analysis methodology was used to discover significant biological processes and pathways shared between COVID-19 and other diseases. The IntAct COVID-19 data set comprised of 828 human genes and 10,473 diseases that together constituted nodes in the disease-gene network. Each of the 70,210 edges connects a human gene with an associated disease. The top 10 genes linked to most number of diseases were VEGFA, BCL2, CTNNB1, ALB, COX2, AGT, HLA-A, HMOX1, FGT2 and COMT. The most vulnerable group of patients thus discovered had comorbid conditions such as carcinomas, malignant neoplasms and Alzheimer's disease. Finally, we identified 37 potentially useful biological processes and pathways for improved therapies.
