--- a/publications.html
+++ b/publications.html
@@ -84,7 +84,7 @@ MathJax.Hub.Config({
 <b>Abstract:</b>
 </div>
 S. Chatterjee, A. Dey, <br />
-arXiv: <br />
+Submitted <br />
 [<a href="" >doi</a>] | [<a href= "http://arxiv.org/abs/" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/" >poster</a>] | [<a href="" >BibTeX</a>] </a> <br />
 </li>
 
@@ -94,7 +94,7 @@ arXiv: <br />
 <b>Abstract:</b>
 </div>
 S. Chatterjee, A. Dey, <br />
-arXiv: <br />
+In Preparation <br />
 [<a href="" >doi</a>] | [<a href= "http://arxiv.org/abs/" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/" >poster</a>] | [<a href="" >BibTeX</a>] </a> <br />
 </li>
 	
