--- a/publications.html
+++ b/publications.html
@@ -89,7 +89,7 @@ Submitted <br />
 </li>
 
 <li>
-<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> High-Content Imaging and AI-Driven Phenotyping of Splicing Defects. </b></a><br />
+<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> High-Content Imaging and AI-Driven Phenotyping of Splicing Defects </b></a><br />
 <div class="abs">
 <b>Abstract:</b>
 </div>
